# mine-clearing-robot

./: .gitignore  README.md  setup_orbbec_local_deps.bash
src/open_manipulator_vision_grasp/: CMakeLists.txt  package.xml
src/open_manipulator_vision_grasp/config/: color_grasp.yaml
src/open_manipulator_vision_grasp/launch/: dabai_vision_grasp.launch.py
src/open_manipulator_vision_grasp/scripts/: detect_color_object.py  detect_depth_object.py
src/open_manipulator_vision_grasp/src/: color_grasp_moveit.cpp
